Send accessibility tree updates to accesskit
Signed-off-by: Luke Warlow <lwarlow@igalia.com>
Signed-off-by: Delan Azabani <dazabani@igalia.com>

--- a/components/layout/Cargo.toml
+++ b/components/layout/Cargo.toml
@@ -17,6 +17,7 @@ doctest = false
 tracing = ["dep:tracing"]
 
 [dependencies]
+accessibility_traits = { workspace = true }
 accesskit = { workspace = true }
 app_units = { workspace = true }
 atomic_refcell = { workspace = true }
