--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -9,6 +9,9 @@ on:
 env:
   RUST_BACKTRACE: 1
   SHELL: /bin/bash
+  GITHUB_TOKEN: ${{ secrets.NIGHTLY_REPO_TOKEN }}
+  GH_TOKEN: ${{ secrets.NIGHTLY_REPO_TOKEN }}
+  NIGHTLY_REPO: ${{ github.repository_owner }}/servo-nightly-builds
 
 jobs:
   create-draft-release:
