Change GH_TOKEN reference in nightly workflow
Updated GH_TOKEN to use secrets.GH_TOKEN instead of secrets.NIGHTLY_REPO_TOKEN.

Signed-off-by: sein. <nonsein@foxmail.com>

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -9,8 +9,7 @@ on:
 env:
   RUST_BACKTRACE: 1
   SHELL: /bin/bash
-  GITHUB_TOKEN: ${{ secrets.NIGHTLY_REPO_TOKEN }}
-  GH_TOKEN: ${{ secrets.NIGHTLY_REPO_TOKEN }}
+  GH_TOKEN: ${{ secrets.GH_TOKEN }} 
   NIGHTLY_REPO: ${{ github.repository_owner }}/servo-nightly-builds
 
 jobs:
