--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -22,19 +22,23 @@ jobs:
       - id: create-release
         run: |
           NIGHTLY_TAG=$(date "+%F")
-          # 增加 --target main (或你的目标仓库默认分支名)
-          # 增加 --overwrite 防止重复运行时报错
+          
+          # 1. 如果今天已经运行过，先删除旧的 Draft Release 和 Tag，防止冲突
+          # 使用 || true 是为了防止在没有旧 Release 时报错导致脚本停止
+          gh release delete "${NIGHTLY_TAG}" --repo "${NIGHTLY_REPO}" --yes || true
+          
+          # 2. 创建新的 Draft Release
+          # 加上 --target main 确保在目标仓库的 main 分支上创建 Tag
           RELEASE_URL=$(gh release create "${NIGHTLY_TAG}" \
             --draft \
             --title "${NIGHTLY_TAG}" \
             --target main \
             --notes "Nightly builds based on servo/servo@${{ github.sha }}" \
-            --repo "${NIGHTLY_REPO}" \
-            --overwrite) 
+            --repo "${NIGHTLY_REPO}") 
           
           TEMP_TAG=$(basename "$RELEASE_URL")
           
-          # 下面的 API 调用也要确保一致
+          # 3. 获取 Release ID
           RELEASE_ID=$( \
             gh api -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
@@ -42,6 +46,9 @@ jobs:
             | jq '.id' \
           )
           echo "RELEASE_ID=${RELEASE_ID}" >> ${GITHUB_OUTPUT}
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          NIGHTLY_REPO: ${{ github.repository_owner }}/servo-nightly-builds
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           NIGHTLY_REPO: ${{ github.repository_owner }}/servo-nightly-builds
